--- a/src/pages/homepage/Homepage.css
+++ b/src/pages/homepage/Homepage.css
@@ -91,10 +91,11 @@
 }
 
 .hero .highlight-colour {
-  background-image: radial-gradient(
-    circle 897px at 9% 80.3%,
-    rgba(55, 60, 245, 1) 0%,
-    rgba(234, 161, 15, 0.9) 100.2%
+  background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #dd2476 51%,
+    #ff512f 100%
   );
 }
 
